--- a/package.json
+++ b/package.json
@@ -13,10 +13,10 @@
   "scripts": {
     "build": "rollup  -c",
     "dev": "rollup -c -w",
-    "test": "jest --watchAll --verbose --silent",
+    "test": "jest --verbose --silent",
     "storybook": "storybook dev -p 6006",
     "build-storybook": "storybook build",
-    "lint": "eslint ./src",
+    "lint": "eslint ./src --ext .ts,.tsx",
     "lint:fix": "eslint ./src --fix",
     "prepare": "npm run build",
     "prepublishOnly": "npm run test && npm run lint"
