--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
     "test": "jest --verbose --silent",
     "storybook": "storybook dev -p 6006",
     "build-storybook": "storybook build",
-    "lint": "eslint ./src --ext .ts,.tsx",
+    "lint": "eslint ./src",
     "lint:fix": "eslint ./src --fix",
     "prepare": "npm run build",
     "prepublishOnly": "npm run test && npm run lint"
