--- a/package.json
+++ b/package.json
@@ -101,5 +101,8 @@
     "eslint-plugin-n": "^16.6.2",
     "eslint-plugin-promise": "^6.1.1",
     "eslint-plugin-react": "^7.33.2"
+  },
+  "resolutions": {
+    "@rollup/rollup-linux-x64-gnu": "4.20.0"
   }
 }
