--- a/package.json
+++ b/package.json
@@ -16,8 +16,8 @@
     "test": "jest --verbose --silent",
     "storybook": "storybook dev -p 6006",
     "build-storybook": "storybook build",
-    "lint": "eslint ./src/ --ext .ts,.tsx",
-    "lint:fix": "eslint ./src --ext .ts,.tsx --fix",
+    "lint": "eslint ./src",
+    "lint:fix": "eslint ./src --fix",
     "prepare": "npm run build",
     "prepublishOnly": "npm run test && npm run lint"
   },
