--- a/package.json
+++ b/package.json
@@ -18,8 +18,7 @@
     "build-storybook": "storybook build",
     "lint": "eslint ./src",
     "lint:fix": "eslint ./src --fix",
-    "prepare": "npm run build",
-    "prepublishOnly": "npm run test && npm run lint"
+    "prepare": "npm run build"
   },
   "babel": {
     "sourceType": "unambiguous",
