--- a/package.json
+++ b/package.json
@@ -10,6 +10,9 @@
     "LICENSE",
     "Readme.md"
   ],
+  "publishConfig": {
+    "access": "public"
+  },
   "scripts": {
     "build": "rollup  -c",
     "dev": "rollup -c -w",
@@ -18,7 +21,8 @@
     "build-storybook": "storybook build",
     "lint": "eslint ./src",
     "lint:fix": "eslint ./src --fix",
-    "prepare": "npm run build"
+    "prepare": "npm run build",
+    "semantic-release": "semantic-release"
   },
   "babel": {
     "sourceType": "unambiguous",
@@ -99,7 +103,8 @@
     "eslint-plugin-import": "^2.29.1",
     "eslint-plugin-n": "^16.6.2",
     "eslint-plugin-promise": "^6.1.1",
-    "eslint-plugin-react": "^7.33.2"
+    "eslint-plugin-react": "^7.33.2",
+    "semantic-release": "^24.0.0"
   },
   "resolutions": {
     "@rollup/rollup-linux-x64-gnu": "4.20.0"
