--- a/package.json
+++ b/package.json
@@ -56,11 +56,11 @@
   "peerDependencies": {
     "@types/react": "^18.3.3",
     "react": "^18.3.1",
-    "react-dom": "^18.3.1"
+    "react-dom": "^18.3.1",
+    "@dnd-kit/core": "6.1.0",
+    "@dnd-kit/modifiers": "7.0.0"
   },
   "dependencies": {
-    "@dnd-kit/core": "6.1.0",
-    "@dnd-kit/modifiers": "7.0.0",
     "clsx": "2.1.1",
     "tailwind-merge": "2.5.2",
     "use-debounce": "10.0.2"
@@ -104,7 +104,8 @@
     "eslint-plugin-n": "^16.6.2",
     "eslint-plugin-promise": "^6.1.1",
     "eslint-plugin-react": "^7.33.2",
-    "semantic-release": "^24.0.0"
+    "semantic-release": "^24.0.0",
+    "@rollup/plugin-terser": "0.4.4"
   },
   "resolutions": {
     "@rollup/rollup-linux-x64-gnu": "4.20.0"
