ci(commitzen and deploy pages): adding commitzen and doing some chnages on deploy pages

--- a/.github/workflows/deploy-pages.yml
+++ b/.github/workflows/deploy-pages.yml
@@ -12,13 +12,13 @@ permissions:
 
 jobs:
   deploy:
+    runs-on: ubuntu-latest
+      - id: build-publish
+        uses: bitovi/github-actions-storybook-to-github-pages@v1.0.3
+        with:
+          path: storybook-static
+          build_command: npm run build-storybook # Optional: Customize your build command
+
     environment:
       name: github-pages
       url: ${{ steps.build-publish.outputs.page_url }}
-    runs-on: ubuntu-latest
-    steps:
-      - id: build-publish
-        uses: bitovi/github-actions-storybook-to-github-pages@v1.0.0
-        with:
-          path: storybook-static
-          build_command: npm run build-storybook
